# CertifyAI

./: .gitignore  AGENTS.md  README.md  certifyai_landing_page_stealth_acid.html  certifyai_tui_simulator_stealth_brutalist.html  certifyai_web_dashboard.html  idea.md  pyproject.toml
certifyai/: __init__.py
certifyai/cli/: __init__.py  main.py
certifyai/engine/: __init__.py  lite_llm.py  models.py  registry.py  runner.py
certifyai/engine/compliance/: __init__.py  mapper.py
certifyai/engine/compliance/frameworks/: eu_ai_act.yaml  nist_ai_rmf.yaml  soc2.yaml
certifyai/engine/database/: __init__.py  manager.py  models.py
certifyai/engine/evidence/: __init__.py  hasher.py  vault.py
certifyai/engine/redteam/: __init__.py  base.py  bias.py  hallucination.py  injection.py  jailbreak.py  pii_leakage.py  plugin_template.py  policy_violation.py
certifyai/tui/: __init__.py  app.py
certifyai/web/: package-lock.json  package.json
certifyai/web/app/: globals.css  layout.tsx  page.tsx
certifyai/web/app/api/dashboard/: route.ts
certifyai/web/app/results/: page.tsx
certifyai/web/app/run/: page.tsx
certifyai/web/app/settings/: page.tsx
certifyai/web/components/: attack-table.tsx  sidebar.tsx  stats-cards.tsx  trend-chart.tsx  vault-log.tsx
certifyai/web/lib/: db_query.py  types.ts
docs/: PRD.md  attack-scenario-catalog.md  commercial-license.md  community-launch-strategy.md  competitive-analysis.md  compliance-framework-spec.md  database-schema.md  devto-content-plan.md  gumroad-listing.md  market-research-report.md  pricing-strategy.md  producthunt-launch-kit.md  security-architecture.md  support-plan.md  technical-architecture.md  test-strategy.md  ux-flows.md
tests/: __init__.py  conftest.py  test_compliance.py  test_database.py  test_evidence.py  test_integration_llm.py  test_models.py  test_plugins.py
