[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "certifyai"
version = "0.1.0"
description = "Continuous compliance engine for AI runtimes"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
keywords = ["ai", "compliance", "red-teaming", "llm", "security"]
authors = [
    { name = "Ravi Kumar", email = "ravi@example.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Red Teaming",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "litellm>=1.50",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
tui = ["textual>=1.0"]
web = ["nextjs"]  # placeholder — Next.js project lives in web/
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "hypothesis>=6.0",
    "playwright>=1.45",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/ravikumarve/CertifyAI"
Repository = "https://github.com/ravikumarve/CertifyAI"
Documentation = "https://github.com/ravikumarve/CertifyAI/tree/main/docs"

[project.scripts]
certifyai = "certifyai.cli.main:cli"

[tool.setuptools.packages.find]
include = ["certifyai*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "smoke: quick sanity checks",
    "slow: tests that hit real LLM APIs",
    "property: hypothesis property-based tests",
]

[tool.coverage.run]
source = ["certifyai"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
]
